crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_list__wrong_head_type.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_list.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@List mkCons (trace "head" in true) (trace "tail" in (con (list integer) [7])) of
  Nil -> trace "cold" in error
  Cons ignored#26 ignored#27 -> trace "body" in 21
--- unoptimized UPLC
(program 1.1.0
  (case
    [[(force (builtin mkCons))
      (force [[(force (builtin trace)) (con string "head")] (delay (con bool True))])]
      (force
        [[(force (builtin trace)) (con string "tail")] (delay (con (list integer) [7]))])]
    (lam ignored_26
      (lam ignored_27
        (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))])))
    (force [[(force (builtin trace)) (con string "cold")] (delay (error))])))
--- optimized Core
let anf#3 : bool = trace "head" in true in
let anf#4 : list int = trace "tail" in (con (list integer) [7]) in
let anf#5 : list int = mkCons anf#3 anf#4 in
case@List anf#5 of
  Nil -> trace "cold" in error
  Cons ignored#1 ignored#2 -> trace "body" in 21
--- optimized UPLC
(program 1.1.0
  [(lam builtin_11
    [(lam builtin_12
      [(lam anf_6
        [(lam anf_7
          [(lam anf_8
            (case
              anf_8
              (lam ignored_9
                (lam ignored_10
                  (force [[builtin_11 (con string "body")] (delay (con integer 21))])))
              (force [[builtin_11 (con string "cold")] (delay (error))])))
            [[builtin_12 anf_6] anf_7]])
          (force [[builtin_11 (con string "tail")] (delay (con (list integer) [7]))])])
        (force [[builtin_11 (con string "head")] (delay (con bool True))])])
      (force (builtin mkCons))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#28 : bool = trace "head" in true in
let anf#29 : list int = trace "tail" in (con (list integer) [7]) in
let anf#30 : list int = mkCons anf#28 anf#29 in
case@List anf#30 of
  Nil -> trace "cold" in error
  Cons ignored#26 ignored#27 -> trace "body" in 21
--- isolated folded Core
let anf#28 : bool = trace "head" in true in
let anf#29 : list int = trace "tail" in (con (list integer) [7]) in
let anf#30 : list int = mkCons anf#28 anf#29 in
let ignored#26 : int = anf#28 in
let ignored#27 : list int = anf#29 in
trace "body" in 21
--- isolated cleaned Core
let anf#28 : bool = trace "head" in true in
let anf#29 : list int = trace "tail" in (con (list integer) [7]) in
let anf#30 : list int = mkCons anf#28 anf#29 in
trace "body" in 21
--- isolated UPLC before
(program 1.1.0
  [(lam anf_28
    [(lam anf_29
      [(lam anf_30
        (case
          anf_30
          (lam ignored_26
            (lam ignored_27
              (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))])))
          (force [[(force (builtin trace)) (con string "cold")] (delay (error))])))
        [[(force (builtin mkCons)) anf_28] anf_29]])
      (force
        [[(force (builtin trace)) (con string "tail")] (delay (con (list integer) [7]))])])
    (force [[(force (builtin trace)) (con string "head")] (delay (con bool True))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_28
    [(lam anf_29
      [(lam anf_30
        (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))]))
        [[(force (builtin mkCons)) anf_28] anf_29]])
      (force
        [[(force (builtin trace)) (con string "tail")] (delay (con (list integer) [7]))])])
    (force [[(force (builtin trace)) (con string "head")] (delay (con bool True))])])
--- result
error: Runtime(MkConsTypeMismatch(Boolean(true)))
--- logs
["head", "tail"]
