crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_list__wrong_tail.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_list.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@List mkCons (trace "head" in 42) (trace "tail" in 0) of
  Nil -> trace "cold" in error
  Cons ignored#20 ignored#21 -> trace "body" in 21
--- unoptimized UPLC
(program 1.1.0
  (case
    [[(force (builtin mkCons))
      (force [[(force (builtin trace)) (con string "head")] (delay (con integer 42))])]
      (force [[(force (builtin trace)) (con string "tail")] (delay (con integer 0))])]
    (lam ignored_20
      (lam ignored_21
        (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))])))
    (force [[(force (builtin trace)) (con string "cold")] (delay (error))])))
--- optimized Core
let anf#3 : int = trace "head" in 42 in
let anf#4 : int = trace "tail" in 0 in
let anf#5 : list int = mkCons anf#3 anf#4 in
case@List anf#5 of
  Nil -> trace "cold" in error
  Cons ignored#1 ignored#2 -> trace "body" in 21
--- optimized UPLC
(program 1.1.0
  [(lam builtin_11
    [(lam builtin_12
      [(lam anf_6
        [(lam anf_7
          [(lam anf_8
            (case
              anf_8
              (lam ignored_9
                (lam ignored_10
                  (force [[builtin_11 (con string "body")] (delay (con integer 21))])))
              (force [[builtin_11 (con string "cold")] (delay (error))])))
            [[builtin_12 anf_6] anf_7]])
          (force [[builtin_11 (con string "tail")] (delay (con integer 0))])])
        (force [[builtin_11 (con string "head")] (delay (con integer 42))])])
      (force (builtin mkCons))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#22 : int = trace "head" in 42 in
let anf#23 : int = trace "tail" in 0 in
let anf#24 : list int = mkCons anf#22 anf#23 in
case@List anf#24 of
  Nil -> trace "cold" in error
  Cons ignored#20 ignored#21 -> trace "body" in 21
--- isolated folded Core
let anf#22 : int = trace "head" in 42 in
let anf#23 : int = trace "tail" in 0 in
let anf#24 : list int = mkCons anf#22 anf#23 in
let ignored#20 : int = anf#22 in
let ignored#21 : list int = anf#23 in
trace "body" in 21
--- isolated cleaned Core
let anf#22 : int = trace "head" in 42 in
let anf#23 : int = trace "tail" in 0 in
let anf#24 : list int = mkCons anf#22 anf#23 in
trace "body" in 21
--- isolated UPLC before
(program 1.1.0
  [(lam anf_22
    [(lam anf_23
      [(lam anf_24
        (case
          anf_24
          (lam ignored_20
            (lam ignored_21
              (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))])))
          (force [[(force (builtin trace)) (con string "cold")] (delay (error))])))
        [[(force (builtin mkCons)) anf_22] anf_23]])
      (force [[(force (builtin trace)) (con string "tail")] (delay (con integer 0))])])
    (force [[(force (builtin trace)) (con string "head")] (delay (con integer 42))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_22
    [(lam anf_23
      [(lam anf_24
        (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))]))
        [[(force (builtin mkCons)) anf_22] anf_23]])
      (force [[(force (builtin trace)) (con string "tail")] (delay (con integer 0))])])
    (force [[(force (builtin trace)) (con string "head")] (delay (con integer 42))])])
--- result
error: Runtime(ExpectedList(Integer(0)))
--- logs
["head", "tail"]
